added js code and others

--- a/project_mDB (2)_(1)/project/index.html
+++ b/project_mDB (2)_(1)/project/index.html
@@ -26,14 +26,14 @@
     <main class="promo">
         <div class="promo__menu">
             <nav class="promo__menu-list">
-                <ul>
-                    <li><a class="promo__menu-item promo__menu-item_active" href="#">Action</a></li>
-                    <li><a class="promo__menu-item" href="#">Adventure</a></li>
-                    <li><a class="promo__menu-item" href="#">Sci-Fi</a></li>
-                    <li><a class="promo__menu-item" href="#">Drama</a></li>
-                    <li><a class="promo__menu-item" href="#">Fantasy</a></li>
-                    <li><a class="promo__menu-item" href="#">Comedy</a></li>
-                    <li><a class="promo__menu-item" href="#">Horor</a></li>
+                <ul class="ul_container">
+                    <!-- <li><a class="promo__menu-item promo__menu-item_active" href="#">ACTION</a></li>
+                    <li><a class="promo__menu-item" href="#">ADVENTURE</a></li>
+                    <li><a class="promo__menu-item" href="#">SCI-FI</a></li>
+                    <li><a class="promo__menu-item" href="#">DRAMA</a></li>
+                    <li><a class="promo__menu-item" href="#">FANTASY</a></li>
+                    <li><a class="promo__menu-item" href="#">COMEDY</a></li>
+                    <li><a class="promo__menu-item" href="#">HOROR</a></li> -->
                 </ul>
             </nav>
         </div>
