--- a/project_mDB (2)_(1)/project/index.html
+++ b/project_mDB (2)_(1)/project/index.html
@@ -25,6 +25,9 @@
     </header>
     <main class="promo">
         <div class="promo__menu">
+            <div class="genress_list">
+                <p>All</p>
+            </div>
             <nav class="promo__menu-list">
                 <ul class="ul_container">
                     <!-- <li><a class="promo__menu-item promo__menu-item_active" href="#">ACTION</a></li>
